# bbot-r3m

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATASETS.md  NOTICE  README.md  SECURITY.md  TRADEMARKS.md  env.example  pyproject.toml  requirements.txt
configs/mixes/: stageA_base.json  stageB_agentic.json
docs/: ALGORITHMS.md  ARCHITECTURE_SPEC.md  ARCHITECTURE_WITH_DIAGRAMS.md  README.md  TRAINING_AND_EVAL.md
docs/configs/: r3m_minimal.yaml
r3m/: __init__.py
r3m/models/: __init__.py  adapter_hf.py  episodic_memory.py  hybrid_ssm.py  recurrent.py
r3m/utils/: env.py
scripts/: _patch_add_eval_to_pretrain.py  _patch_add_skip_exporter.py  _patch_pretrain_add_eval.py  _patch_quick_eval_unicode.py  _patch_remove_attention_mask.py  bigger_smoke_test_r3m_recurrent.py  chat_r3m_ckpt_wsl.ps1  distill_adapter_hf_to_r3m.py  distill_smoke_qwen_to_r3m.py  eval_adapter_memory_multiturn.py  eval_r3m_recurrent_one_line.py  export_hf_to_jsonl.py  generate_r3m_recurrent_samples.py  make_eval_from_local_trainfile.py  make_memory_skill_rows.py  pretrain_hybrid_ssm.py  pretrain_r3m_recurrent_hf.py  quick_eval_hybrid.py  smoke_test_r3m.py  smoke_test_r3m_adapter_hf.py  smoke_test_r3m_recurrent.py  split_jsonl_hash.py  train_adapter_memory_skill_streaming.py  train_r3m_minimal.py  train_r3m_recurrent.py
